--- a/rag_llm.ipynb
+++ b/rag_llm.ipynb
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
     "      if epoch % reshuffle_every == 0:\n",
     "        train_data, test_data = reshuffle_data(data_sample)\n",
     "        train_loader = DataLoader(train_data, batch_size=16, shuffle=True)\n",
-    "        test_loader = DataLoader(test_data, batch_size=16, shuffle=False)\n",
+    "        valid_loader = DataLoader(test_data, batch_size=16, shuffle=False)\n",
     "      model.train() # Turn on the train-mode\n",
     "      epoch_training_loss = 0\n",
     "\n",
