Added typing to methods

--- a/rag_llm.ipynb
+++ b/rag_llm.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
     "import datasets\n",
     "from tqdm import tqdm\n",
     "import time\n",
-    "from transformers import GPT2Tokenizer, GPT2LMHeadModel\n",
+    "from transformers import GPT2Tokenizer, GPT2LMHeadModel, BatchEncoding\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,21 +108,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "class LanguageDataset(Dataset):\n",
-    "    def __init__(self, df, tokenizer):\n",
-    "        self.labels = df.columns #устанавливаем метки столбцов\n",
-    "        self.data = df.to_dict(orient='records')\n",
+    "    def __init__(self, df: pd.DataFrame, tokenizer: GPT2Tokenizer) -> None:\n",
+    "        \"\"\"\n",
+    "        Initializes the dataset for language modeling. Converts the input DataFrame into a list of dictionaries \n",
+    "        for easy access, sets up the tokenizer for text encoding, and defines the maximum token sequence length.\n",
+    "        \"\"\"\n",
+    "        self.labels = df.columns # Define column labels\n",
+    "        self.data = df.to_dict(orient='records') # Elementwise convert the DataFrame to the list of dictionaries\n",
     "        self.tokenizer = tokenizer\n",
     "        self.max_length = 128\n",
     "\n",
-    "    def __len__(self):\n",
+    "    def __len__(self) -> int:\n",
+    "        \"\"\"\n",
+    "        Returns the total number of samples in the dataset.\n",
+    "        \"\"\"\n",
     "        return len(self.data)\n",
     "    \n",
-    "    def __getitem__(self, idx):\n",
+    "    def __getitem__(self, idx: int) -> BatchEncoding:\n",
+    "        \"\"\"\n",
+    "        Retrieves a sample at the specified index, combines its fields into a single text string, \n",
+    "        and tokenizes it using the GPT-2 tokenizer.\n",
+    "        \"\"\"\n",
     "        x = self.data[idx][self.labels[0]]\n",
     "        y = self.data[idx][self.labels[1]]\n",
     "        z = self.data[idx][self.labels[2]]\n",
@@ -144,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +164,7 @@
     "valid_size = len(data_sample) - train_size\n",
     "\n",
     "train_data, valid_data = random_split(data_sample, [train_size, valid_size])\n",
-    "train_loader = DataLoader(train_data, batch_size=BATCH_SIZE, shuffle=True) #дополнительно перемешаем данные\n",
+    "train_loader = DataLoader(train_data, batch_size=BATCH_SIZE, shuffle=True) # Additional shuffle\n",
     "valid_loader = DataLoader(valid_data, batch_size=BATCH_SIZE)"
    ]
   },
@@ -168,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,16 +207,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def reshuffle_data(dataset):\n",
+    "def reshuffle_data(dataset: LanguageDataset):\n",
+    "    \"\"\"\n",
+    "    Reshuffles data in the dataset in order not to overfit the model.\n",
+    "    \"\"\"\n",
     "    train_data, test_data = random_split(dataset, [int(0.8 * len(dataset)), len(dataset) - int(0.8 * len(dataset))])\n",
     "    return train_data, test_data\n",
     "\n",
-    "def train_model(model, num_epochs, train_loader, batch_size, model_name, scheduler, tokenizer, device):\n",
-    "  for epoch in range(num_epochs):\n",
+    "def train_model(model: GPT2LMHeadModel, num_epochs: int, train_loader: DataLoader,\n",
+    "         batch_size: int, model_name: str, scheduler: ExponentialLR, tokenizer: GPT2Tokenizer, device: device):\n",
+    "    \"\"\"\n",
+    "    Trains a DistilGPT-2 language model for a specified number of epochs, with training and validation loops. \n",
+    "    Losses are logged, and learning rate scheduling is applied after each epoch.\n",
+    "    \"\"\"\n",
+    "    for epoch in range(num_epochs):\n",
     "      start_time = time.time()  # Start the timer for the epoch\n",
     "      if epoch % reshuffle_every == 0:\n",
     "        train_data, test_data = reshuffle_data(data_sample)\n",
@@ -225,15 +244,15 @@
     "\n",
     "          loss = outputs.loss\n",
     "          \n",
-    "          loss.backward() #backprop\n",
-    "          optimizer.step() #weight update\n",
+    "          loss.backward() # Backprop\n",
+    "          optimizer.step() # Weight update\n",
     "\n",
     "          train_iterator.set_postfix({'Training Loss': loss.item()})\n",
     "          epoch_training_loss += loss.item()\n",
     "\n",
     "      avg_epoch_training_loss = epoch_training_loss / len(train_iterator)\n",
     "      \n",
-    "      model.eval() #Turn on the eval-mode\n",
+    "      model.eval() # Turn on the eval-mode\n",
     "      \n",
     "      epoch_validation_loss = 0\n",
     "      total_loss = 0\n",
